--- a/Code/EM17_Desktop/.classpath
+++ b/Code/EM17_Desktop/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/fabri/git/INGSW2017_41/Code/EM17_Desktop/src/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
