--- a/Code/EM17_Desktop/.classpath
+++ b/Code/EM17_Desktop/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="ojdbc6.jar"/>
+	<classpathentry kind="lib" path="logout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
