--- a/Code/EM17_Desktop/.classpath
+++ b/Code/EM17_Desktop/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="ojdbc6.jar"/>
 	<classpathentry kind="lib" path="logout.jar"/>
-	<classpathentry kind="lib" path="rs2xml.jar"/>
+	<classpathentry kind="lib" path="jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
