--- a/Code/EM17_Web/.classpath
+++ b/Code/EM17_Web/.classpath
@@ -23,5 +23,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="rest-api-sdk-1.14.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
