--- a/Code/EM17_Desktop/.classpath
+++ b/Code/EM17_Desktop/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="logout.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-java-8.0.12.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
